[gd_scene load_steps=5 format=2]

[ext_resource path="res://Scenes/SceneScripts/GlobalAudio.gd" type="Script" id=1]
[ext_resource path="res://Assets/Audio/Helped.wav" type="AudioStream" id=2]
[ext_resource path="res://Assets/Audio/QuestionTimeOut.wav" type="AudioStream" id=3]
[ext_resource path="res://Assets/Audio/Short_Pipe_SFX.wav" type="AudioStream" id=4]

[node name="GlobalAudio" type="Node2D"]
script = ExtResource( 1 )

[node name="AudioAnswered" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 2 )

[node name="QuestionTimeOut" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 3 )

[node name="EjectCoffee" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 4 )
volume_db = -10.0
